--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "Ιστοχώρος προβολής πολιτιστικού περιεχομένου"
-# email: your-email@example.com
+email: inf.dig2401@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Ο ιστοχώρος αυτός αναπτύχτηκε από τους Χρήστο Παπαϊωάννου & Ιωάννα Παπαγεωργίου,
+  Ο ιστοχώρος αυτός αναπτύχτηκε από τους Φρειδερίκη Βάκαλου,
   στα πλαίσια εργασίας του μαθήματος Εργαλεία Προβολής Τουριστικού & Πολιτιστικού Προϊόντος
   του ΠΜΣ "Ψηφιακές Εφαρμογές & Καινοτομία" του Ιονίου Πανεπιστημίου.
 baseurl: "heritage-promotion" # the subpath of your site, e.g. /blog
-url: "https://pajoanna-hub.github.io/heritage-promotion/" 
+url: "https:///errikav.github.io/heritage-promotion/" 
 # twitter_username: jekyllrb
 github_username: pajoanna-hub
 
